--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -10,7 +10,7 @@
 }
 
 @mixin edit-section--spacing{
-    padding: 0 25px 25px;
+    padding: 0 0 25px;
     margin: 0 0 40px;
     border-bottom: 1px solid #DEDEDE;
 }
