--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -563,7 +563,7 @@ body {
       }
     }
     .hpm-contactDetails{
-      padding: 0 25px;
+      padding: 0;
       ul{
         margin: 0;
         padding: 0;
@@ -626,7 +626,7 @@ body {
 
     .hpm-home-events{
       @include edit-section--spacing;
-      margin-bottom: 20px;
+      
       padding-bottom: 0px;
       
 
@@ -831,7 +831,7 @@ body {
       color: #000;
       width: 100%;
       outline: none;
-      margin-bottom: 10px;
+      margin-bottom: 5px;
       font-weight: bold;
       font-size: 16px;
       optgroup{
@@ -856,17 +856,17 @@ body {
   }
 }
 
-.retention_interval_div {
-  opacity: 0.4;
-  pointer-events: none; 
+// .retention_interval_div {
+//   opacity: 0.6;
+//   pointer-events: none; 
   
-}
+// }
 
-#ifYes{
-  input[type=text] {
-		&:disabled {
-			color: darkGray;
-			font-style: italic;
-		}
-	}
-}
+// #ifYes{
+//   input[type=text] {
+// 		&:disabled {
+// 			color: darkGray;
+// 			font-style: italic;
+// 		}
+// 	}
+// }
